# py2wasm-sandbox

./: pyproject.toml  readme.md
javascript/: run_wasi.js
sandbox/: generated.js  helloworld.wat  helloworlds.js
src/py2wasm_sandbox/step1/: compiler.py  test_step1.py
src/py2wasm_sandbox/step2/: compiler.py  test_step2.py
src/py2wasm_sandbox/step3/: compiler.py  test_step3.py
src/py2wasm_sandbox/step4/: compiler.py  test_step4.py
src/py2wasm_sandbox/step5/: compiler.py  test_step5.py
src/py2wasm_sandbox/step6/: compiler.py  test_step6.py
